--- a/pagina-principal/estilos/styleMobile.css
+++ b/pagina-principal/estilos/styleMobile.css
@@ -20,7 +20,7 @@
     --font03:s;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:320px) and (max-width:768px) {
     header > nav.navbar{
         display: none;
     }
@@ -55,7 +55,7 @@
         display: block;
         position: relative;
         transform-origin: center;
-        transition: .7s;
+        transition: .4s;
     }
     button#btn-menu > span.linha3{
         margin-left: 35px;
@@ -83,12 +83,12 @@
         position: absolute;
         background-color: #f5f4f4;
         width: 75%;
-        height: auto;
+        height: 0%;
         padding-bottom: 10px;
         padding-right: 10px;
         top: 0px;
         border-bottom-right-radius: 4px;
-        background-attachment: fixed;
+        transition: 1s ease;
     }
 
     nav.nav-mobile > ul.ul-navbar-mobile{
