--- a/pagina-principal/estilos/styleMobile.css
+++ b/pagina-principal/estilos/styleMobile.css
@@ -35,7 +35,7 @@
     }
 
     button#btn-menu > span.linha1{
-        margin-top: 30px;
+        margin-top: 20px;
         margin-left: 35px;
         margin-bottom: 10px;
         width: 40px;
@@ -81,7 +81,7 @@
     header nav.nav-mobile{
         display: none;
         position: absolute;
-        background-color: #f5f4f4;
+        background-color: #6d6a6a;
         width: 75%;
         height: 0%;
         padding-bottom: 10px;
@@ -89,6 +89,7 @@
         top: 0px;
         border-bottom-right-radius: 4px;
         transition: 1s ease;
+        z-index: 5;
     }
 
     nav.nav-mobile > ul.ul-navbar-mobile{
@@ -133,6 +134,18 @@
         font-size: .8rem;
         color: var(--corpreta);
         margin-left: -70px;
+    }
+
+    /*caixa-container dos slides-mobile*/
+
+    main > div.slider > div.slides > div.slide-first > div.container-item-slide{
+        width: 100%;
+        margin-top: 70%;
+        gap: 30px;
+    }
+
+    div.container-item-slide > h1{
+        font-size: 2.6rem;
     }
 
 }
