--- a/pagina-principal/estilos/styleAnimaçao.css
+++ b/pagina-principal/estilos/styleAnimaçao.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 
+
+/*animação do menu mobile*/
 #btn-menu.ativar .linha1{
     transform: translateY(15px) rotate(-54deg);
-    background-color: red;
+    background-color: grey;
 }
 
 #btn-menu.ativar .linha2{
@@ -11,8 +13,9 @@
 
 #btn-menu.ativar .linha3{
     transform: translateY(-11px) rotate(49deg);
-    background-color: red;
+    background-color: grey;
 }
+/*Fim animação do menu mobile*/
 
 @media screen and (max-width: 768px){
     header > nav.nav-mobile.abrir{
