--- a/pagina-principal/estilos/styleMobile.css
+++ b/pagina-principal/estilos/styleMobile.css
@@ -82,14 +82,14 @@
         display: none;
         position: absolute;
         background-color: #6d6a6a;
-        width: 75%;
+        width: 75%; 
         height: 0%;
         padding-bottom: 10px;
         padding-right: 10px;
         top: 0px;
         border-bottom-right-radius: 4px;
         transition: 1s ease;
-        z-index: 5;
+        z-index: 5 !important;
     }
 
     nav.nav-mobile > ul.ul-navbar-mobile{
@@ -140,12 +140,13 @@
 
     main > div.slider > div.slides > div.slide-first > div.container-item-slide{
         width: 100%;
-        margin-top: 70%;
+        margin-top: 80%;
         gap: 30px;
     }
 
     div.container-item-slide > h1{
-        font-size: 2.6rem;
+        font-size: 2rem;
+        transform: translateX(5%) translateY(-140%);
     }
 
 }
